--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,7 @@
 <div>
+  <%= link_to "Add recipe", new_recipe_path %>
+</div>
+<div>
   <h1 class="font-bold text-4xl">Cookery Notes</h1>
   <p>Your personal recipe collection</p>
   <ul>
